feat: added content

--- a/src/content/post/markdown-elements-demo-post.mdx
+++ b/src/content/post/markdown-elements-demo-post.mdx
@@ -180,11 +180,11 @@ import Logo from "~/components/Logo.astro";
 
 ## MDX
 
-<Logo />
+<Logo isDark={true} />
 ```
 
 <div style="border:1px dashed;padding: 10px 5px">
-  <Logo />
+  <Logo isDark={false} />
 </div>
 
 ## Astro Embed
